# promise-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  FINAL_STATUS.md  GITHUB_SETUP.md  LICENSE  PHASE_1A_COMPLETE.md  PHASE_1B_COMPLETE.md  PHASE_1C_COMPLETE.md  PROMISE_THEORY_FOUNDATIONS.md  QUICK_START.md  RAILWAY_SETUP.md  README.md  ROADMAP.md  SETUP.md  TODO.md  TRAINING_BILL_CANDIDATES.md  VERIFICATION.md  VERIFICATION_COMPLETE.md  connect-backend.sh  vercel.json
backend/: .env.example  (+7 more)
promise-data-pipeline/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
promise-data-pipeline/scripts/: ingest_gpra.py  ingest_mona.py  run_analysis.py  setup_db.py  train_model.py
promise-data-pipeline/src/analysis/: boltzmann.py  cascade.py  defects.py  graph_metrics.py  health.py  langevin.py  nucleation.py  percolation.py  phase_diagram.py
promise-data-pipeline/src/api/: app.py  auth.py  metering.py
promise-data-pipeline/src/api/routes/: analysis.py  export.py  networks.py  predict.py  promises.py
promise-data-pipeline/src/db/: load.py  schema.sql  supabase_client.py
promise-data-pipeline/src/ml/: evaluate.py  features.py  predict.py  train.py  xgboost_model.py
promise-data-pipeline/src/qa/: checks.py  reports.py
promise-data-pipeline/src/schema/: mapping.py  network.py  promise.py  validation.py
promise-data-pipeline/tests/: test_analysis.py  test_cascade.py  test_gpra_parse.py  test_mona_parse.py  test_transform.py
(+670 files in other folders)
