[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "promise-data-pipeline"
version = "0.1.0"
description = "Automated extraction and analysis pipeline for promise datasets (GPRA + IMF MONA)"
requires-python = ">=3.9"
license = {text = "Proprietary"}

dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "supabase>=2.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
